WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117411
[BlackBerry] Store ParsedCookies as RefPtrs instead of PassRefPtrs in CookieDatabaseBackingStore
https://bugs.webkit.org/show_bug.cgi?id=117411
Summary
[BlackBerry] Store ParsedCookies as RefPtrs instead of PassRefPtrs in CookieD...
otcheung
Reported
2013-06-10 09:38:03 PDT
Store ParsedCookies as RefPtrs instead of PassRefPtrs in CookieDatabaseBackingStore
Attachments
Patch
(3.21 KB, patch)
2013-06-10 09:51 PDT
,
otcheung
no flags
Details
Formatted Diff
Diff
Patch
(2.66 KB, patch)
2013-06-10 10:14 PDT
,
otcheung
no flags
Details
Formatted Diff
Diff
Patch
(1.63 KB, patch)
2013-06-10 10:17 PDT
,
otcheung
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2013-06-10 09:51:07 PDT
Created
attachment 204171
[details]
Patch
otcheung
Comment 2
2013-06-10 10:14:26 PDT
Created
attachment 204172
[details]
Patch
otcheung
Comment 3
2013-06-10 10:17:55 PDT
Created
attachment 204173
[details]
Patch
Rob Buis
Comment 4
2013-06-10 10:18:31 PDT
Comment on
attachment 204173
[details]
Patch LGTM.
WebKit Commit Bot
Comment 5
2013-06-10 10:45:51 PDT
Comment on
attachment 204173
[details]
Patch Clearing flags on attachment: 204173 Committed
r151397
: <
http://trac.webkit.org/changeset/151397
>
WebKit Commit Bot
Comment 6
2013-06-10 10:45:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug