[BlackBerry] Store ParsedCookies as RefPtrs instead of PassRefPtrs in CookieDatabaseBackingStore https://bugs.webkit.org/show_bug.cgi?id=117411

JIRA388672
BRWSR-11465
Patch by Otto Derek Cheung <otcheung@rim.com> on 2013-06-10
Reviewed by Rob Buis.

When we queue up ParsedCookie objects for modification, we should be storing them as a refptr instead
of a PassRefPtr.

* platform/blackberry/CookieDatabaseBackingStore/CookieDatabaseBackingStore.h:

Canonical link: https://commits.webkit.org/135623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151397 268f45cc-cd09-0410-ab3c-d52691b4dbfc